--- a/Emotions_Part1.ipynb
+++ b/Emotions_Part1.ipynb
@@ -471,7 +471,7 @@
     "with open('Y_test.pickle', 'rb') as f:\n",
     "    Y_test = pickle.load(f)\n",
     "with open('y_test.pickle', 'rb') as f:\n",
-    "    Y_test = pickle.load(f)"
+    "    y_test = pickle.load(f)"
    ]
   },
   {
